InTheLoop: adding gitignore and dotenv.

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@
 SMTP_HOST=mail.domain.com
 SMTP_USER=email@domain.com
 SMTP_PASS="password"
+# Add sensitive variables in this file, e.g. passwords, api keys, etc
